--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # DB_CONNECT="mongodb+srv://yaelshop:159951@cluster0.u8r2kzq.mongodb.net/ReactShop?retryWrites=true&w=majority"
 DB_CONNECT="mongodb+srv://YH:PhyF0AhUjRUKRLJY@cluster0.l3aewgs.mongodb.net/H&YDB?retryWrites=true&w=majority"
-PORT=https://storeproductsserver.onrender.com
+PORT=8000
 
